--- a/SOL/practica2-6/nbproject/project.properties
+++ b/SOL/practica2-6/nbproject/project.properties
@@ -36,13 +36,15 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/practica2-6
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-j-9.1.0.jar=../../../../../Downloads/mysql-connector-j-9.1.0/mysql-connector-j-9.1.0/mysql-connector-j-9.1.0.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.mysql-connector-j-9.1.0.jar}
+    ${file.reference.mysql-connector-j-9.1.0.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
